--- a/package.json
+++ b/package.json
@@ -5,17 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve demo/src/main.js",
     "build": "vue-cli-service build demo/src/main.js",
-    "lint": "vue-cli-service lint demo/src/main.js",
-    "build-lib": "vue-cli-service build --target lib --name vue-live-docs src/main.js"
+    "lint": "vue-cli-service lint demo/src/main.js"
   },
   "dependencies": {
     "highlight.js": "^9.17.1",
-    "katex": "^0.11.1",
-    "markdown-it": "^10.0.0",
+    "markdown-it": "^11.0.0",
     "vue": "^2.6.10",
     "vue-codemirror": "^4.0.6",
-    "vue-katex": "^0.3.0",
     "vue-router": "^3.1.3",
+    "vue-template-compiler": "^2.6.10",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
@@ -23,14 +21,13 @@
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "vue-cli-plugin-pug": "^1.0.7",
+    "vue-cli-plugin-vuetify": "^2.0.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-pug": "^1.0.7",
-    "vue-cli-plugin-vuetify": "^2.0.2",
-    "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
